--- a/layouts/index.html
+++ b/layouts/index.html
@@ -1,3 +1,5 @@
+{{ $logoUrl := "logo.png" | relURL }}
+
 <!doctype html>
 <html>
 <head>
@@ -6,8 +8,32 @@
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-<h1 class="text-3xl font-bold underline">
-  Hello world!
-</h1>
+<div
+  class="lg:px-24 lg:py-24 md:py-20 md:px-44 px-4 py-24 items-center flex justify-center flex-col-reverse lg:flex-row md:gap-28 gap-16">
+  <div class="xl:pt-24 w-full xl:w-1/2 relative pb-12 lg:pb-0">
+    <div class="relative">
+      <div class="absolute">
+        <div class="">
+          <h1 class="my-2 text-gray-800 font-bold text-2xl">
+            Coming Soon...
+          </h1>
+          <p class="my-2 text-gray-800 pb-2">monetr is still being built, but you can see the progress on our
+            GitHub!</p>
+          <a
+            href="https://github.com/monetr/monetr"
+            style="background-color: #4e1aa0"
+            class="sm:w-full lg:w-auto my-2 border rounded md py-4 px-8 text-center text-white focus:outline-none focus:ring-2 focus:ring-opacity-50">
+            See Progress
+          </a>
+        </div>
+      </div>
+      <div>
+      </div>
+    </div>
+  </div>
+  <div>
+    <img class=".object-contain" src="{{ $logoUrl }}"/>
+  </div>
+</div>
 </body>
 </html>
